--- a/customer.html
+++ b/customer.html
@@ -324,9 +324,11 @@
                 </div>
         </div>
 
-        <div class="hours">
-            <h2>Service Hours</h2>
-            <p>Our team is available Monday to Saturday (excluding public holidays) from 10:00 AM to 6:00 PM IST.</p>
+        <div class="contact-box">
+            <div class="contact-method">
+                <h2>Service Hours</h2>
+                <p>Our team is available Monday to Saturday (excluding public holidays) from 10:00 AM to 6:00 PM IST.</p>
+            </div>
         </div>
 
         <div class="escalation">
