--- a/shipping.html
+++ b/shipping.html
@@ -5,8 +5,13 @@
     <title>Athletix | Shipping Information</title>
     <link rel="stylesheet" href="main.css">
     <style>
-        body {
-            .header {
+        html,body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #000;
+        }
+
+        .header {
             background-color: #000;
             color: #fff;
             padding: 10px 20px;
@@ -53,9 +58,6 @@
 
         .help-signup a:hover {
             text-decoration: underline;
-        }
-
-            font-family: Arial, sans-serif;
         }
 
         .container {
