--- a/shipping.html
+++ b/shipping.html
@@ -5,10 +5,9 @@
     <title>Athletix | Shipping Information</title>
     <link rel="stylesheet" href="main.css">
     <style>
-        html,body {
+        body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background-color: #000;
         }
 
         .header {
