--- a/football_product2.html
+++ b/football_product2.html
@@ -354,7 +354,7 @@
         <h1>Nike PSG 24-25 Home kit</h1>
         <h2> ₹ 4695.00</h2>
 
-        <p><strong>Description:</strong>  </p>
+        <p><strong>Description:</strong> Show your pride with the Nike PSG 24-25 Home Kit, blending iconic Parisian style with high-performance Dri-FIT technology. Designed for comfort and authenticity, it’s the perfect look for true fans on and off the pitch. </p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
