--- a/return.html
+++ b/return.html
@@ -288,8 +288,8 @@
             <h2>How to Initiate a Return or Exchange</h2>
             <p>Follow these steps to initiate your return or exchange:</p>
             <ul>
-                <li>Go to My Orders and select the item.</li>
-                <li>Follow on-screen instructions and schedule a pickup.</li>
+                <li>Contact our Customer Care.</li>
+                <li>Follow given instructions and schedule a pickup.</li>
                 <li>Pack the product securely and hand it to the delivery agent.</li>
             </ul>
         </div>
@@ -299,14 +299,7 @@
             <p>Once your return is received and inspected, refunds will be processed within 5-7 business days to the original payment method.</p>
         </div>
 
-        <div class="policy-section">
-            <h2>Non-returnable Items</h2>
-            <ul>
-                <li>Innerwear, swimwear, and socks</li>
-                <li>Personalized or customized products</li>
-                <li>Gift cards or promotional items</li>
-            </ul>
-        </div>
+        
     </div>
 
     <footer>
