--- a/shipping.html
+++ b/shipping.html
@@ -236,10 +236,10 @@
 
         <div class="section">
             <h2>Shipping Charges</h2>
-            <p>We offer free standard shipping on all orders above ₹999.</p>
+            <p>We offer free standard shipping on all orders.</p>
             <ul>
-                <li>Orders below ₹999: ₹75 flat shipping charge</li>
-                <li>Express shipping (where available): Additional ₹150</li>
+                <li> ₹0 flat shipping charge</li>
+                <li>Express shipping (where available)</li>
             </ul>
         </div>
 
@@ -247,8 +247,8 @@
             <h2>Order Tracking</h2>
             <p>After placing your order, you'll receive a confirmation email with a tracking link.</p>
             <ul>
-                <li>Track your order via My Orderssection</li>
-                <li>You'll also receive updates via SMS and email</li>
+                
+                <li>You'll receive updates via SMS and email</li>
             </ul>
         </div>
 
