--- a/help.html
+++ b/help.html
@@ -288,11 +288,7 @@
         <div class="faq-section">
             <h2>Frequently Asked Questions</h2>
 
-            <details>
-                <summary>How do I track my order?</summary>
-                <p>Log in to your account, go to "Orders", and click "Track Order" next to your purchase.</p>
-            </details>
-
+            
             <details>
                 <summary>What is the return policy?</summary>
                 <p>Returns are accepted within 30 days of delivery. Products must be unused and in original packaging.
@@ -301,7 +297,7 @@
 
             <details>
                 <summary>How can I cancel or change an order?</summary>
-                <p>If your order hasn't shipped yet, you can cancel it from the "Orders" page. Contact support if
+                <p>If your order hasn't shipped yet, you can cancel it by contacting our customer support service. Contact support if
                     changes are needed.</p>
             </details>
 
@@ -310,10 +306,7 @@
                 <p>Currently, we ship only within India. Stay tuned as we expand our services!</p>
             </details>
 
-            <details>
-                <summary>How do I use a discount code?</summary>
-                <p>Enter your promo code at checkout in the "Apply Code" field before completing the payment.</p>
-            </details>
+            
         </div>
 
         <div class="contact-box">
