--- a/homepage.html
+++ b/homepage.html
@@ -273,7 +273,7 @@
     </div>
     <div style="padding: 10px 10%; font-family: Arial, sans-serif;">
         <h2 style="font-weight: 300; font-size: 48px; margin-bottom: 30px;text-align: center;">
-            BEST SELLERS!
+            PREVIEW OF OUR MOST EXCLUSIVE MERCH AND ACCESSORIES!
         </h2>
     </div>
     <div class="product-grid">
