--- a/men_product5.html
+++ b/men_product5.html
@@ -353,11 +353,11 @@
     <button class="back-btn" onclick="history.back()">← Back to Catalogue</button>
     <div class="product-container">
       <div class="product-images">
-        <img id="mainImage" class="main-image" src="https://media.darveys.com/catalog/product/c/l/clot_050525_104471_1.jpg" alt="Comfort Sliders" />
+        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/39614815-be6a-4b01-be04-bab385a972df/AS+M+NK+TCH+SUPER+LTWT+JKT.png" alt="Comfort Sliders" />
         <div class="thumbnail-container">
-          <img class="thumbnail active" src="https://media.darveys.com/catalog/product/c/l/clot_050525_104471_1.jpg" alt="Angle 1">
-          <img class="thumbnail" src="https://media.darveys.com/catalog/product/c/l/clot_050525_104471_2.jpg" alt="Angle 2">
-          <img class="thumbnail" src="https://media.darveys.com/catalog/product/c/l/clot_050525_104471_3.jpg" alt="Angle 3">
+          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/39614815-be6a-4b01-be04-bab385a972df/AS+M+NK+TCH+SUPER+LTWT+JKT.png" alt="Angle 1">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/389f7ac3-89b8-41b7-8837-441e8c1c9af2/AS+M+NK+TCH+SUPER+LTWT+JKT.png" alt="Angle 2">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/d850c06b-944f-45ed-8d73-ea744a290c1e/AS+M+NK+TCH+SUPER+LTWT+JKT.png" alt="Angle 3">
         </div>
       </div>
       <div class="product-details">
