--- a/cricket_athletix.html
+++ b/cricket_athletix.html
@@ -11,7 +11,7 @@
        body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background-color:#000;
+            background-color:white;
         }
 
         .header {
@@ -246,8 +246,9 @@
             font-size: 3em;
             margin: 40px 0 20px;
             color: black;
-            
+            background-color: white;
         }
+
 
     </style>
     <link rel="icon" href="fav.jpeg" type="image/jpeg">
