--- a/men_product5.html
+++ b/men_product5.html
@@ -352,7 +352,7 @@
         </div>
       </div>
       <div class="product-details">
-        <h1>Balenciaga Black Crewneck Logo T-shirt</h1>
+        <h1>Balenciaga Black Crewneck Logo T-shirt deployy</h1>
         <h2> ₹53500.41</h2>
         <p><strong>Description:</strong> Minimalist and bold, this black Balenciaga crewneck tee features a relaxed fit and signature logo detail — a modern staple crafted in premium cotton for everyday luxury.</p>
         <div class="size-selector">
