--- a/men_athletix.html
+++ b/men_athletix.html
@@ -4,14 +4,14 @@
 <head>
     <title>Men - Athletix</title>
     <style>
-        * {
+       * {
             font-family: Arial, sans-serif;
        }
  
        body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background-color: #000;
+            background-color:white;
         }
 
         .header {
@@ -68,7 +68,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            background-color: #000;
+            background-color: white;
             color: #fff;
             padding: 20px;
         }
@@ -245,8 +245,8 @@
             text-align: center;
             font-size: 3em;
             margin: 40px 0 20px;
-            color: white;
-            background-color: #000;
+            color: black;
+            background-color: white;
         }
 
     </style>
