--- a/shoes_athletix.html
+++ b/shoes_athletix.html
@@ -11,7 +11,7 @@
        body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background-color: #000;
+            background-color:white;
         }
 
         .header {
@@ -68,7 +68,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            background-color: #000;
+            background-color: white;
             color: #fff;
             padding: 20px;
         }
@@ -245,9 +245,10 @@
             text-align: center;
             font-size: 3em;
             margin: 40px 0 20px;
-            color: white;
-            background-color: #000;
+            color: black;
+            background-color: white;
         }
+
     </style>
     <link rel="icon" href="fav.jpeg" type="image/jpeg">
 </head>
