--- a/men_product5.html
+++ b/men_product5.html
@@ -352,9 +352,9 @@
         </div>
       </div>
       <div class="product-details">
-        <h1>Balenciaga Black Crewneck Logo T-shirt deployy</h1>
-        <h2> ₹53500.41</h2>
-        <p><strong>Description:</strong> Minimalist and bold, this black Balenciaga crewneck tee features a relaxed fit and signature logo detail — a modern staple crafted in premium cotton for everyday luxury.</p>
+        <h1>Nike Sportswear Tech</h1>
+        <h2> ₹12000</h2>
+        <p><strong>Description:</strong> Step into the future of streetwear with the Nike Sportswear Tech collection — where cutting-edge design meets unmatched comfort. Built for movement and made to turn heads.</p>
         <div class="size-selector">
           <strong>Select Size:</strong>
           <div class="size-options">
@@ -366,7 +366,7 @@
           </div>
         </div>
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="005" data-name="Balenciaga Black Crewneck Logo T-shirt" data-price="53500.41">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="005" data-name="Nike Sportswear Tech" data-price="12000">
             Add to Bag
           </button>
         </div>
