--- a/men_athletix.html
+++ b/men_athletix.html
@@ -320,8 +320,8 @@
             <div class="product-card">
                 <a href="men_product5.html">
                     <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/39614815-be6a-4b01-be04-bab385a972df/AS+M+NK+TCH+SUPER+LTWT+JKT.png" alt="Sliders">
-                    <h3>Balenciaga Black Crewneck Logo T-shirt</h3>
-                    <h3 style="color:#8e8d8d">Balenciaga</h3>
+                    <h3>Nike Sportswear Tech</h3>
+                    <h3 style="color:#8e8d8d">Nike Tech</h3>
                 </a>
                 
             </div>
