--- a/men_product5.html
+++ b/men_product5.html
@@ -361,8 +361,8 @@
         </div>
       </div>
       <div class="product-details">
-        <h1>Balenciaga Black Crewneck Logo T-shirt</h1>
-        <h2> ₹53500.41</h2>
+        <h1>Nike Sportswear Tech</h1>
+        <h2> ₹12000</h2>
         <p><strong>Description:</strong> Minimalist and bold, this black Balenciaga crewneck tee features a relaxed fit and signature logo detail — a modern staple crafted in premium cotton for everyday luxury.</p>
         <div class="size-selector">
           <strong>Select Size:</strong>
@@ -375,7 +375,7 @@
           </div>
         </div>
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="005" data-name="Balenciaga Black Crewneck Logo T-shirt" data-price="53500.41">
+          <button class="add-to-bag" data-id="005" data-name="Nike Sportswear Tech" data-price="120000">
             Add to Bag
           </button>
         </div>
@@ -433,6 +433,26 @@
     </div>
   </footer>
   <script src="auth.js"></script>
+  <script>
+    // Size selection logic for highlight only (for cart, just use selected class in your cart logic)
+    const sizeOptions = document.querySelectorAll('.size-option');
+    sizeOptions.forEach(option => {
+      option.addEventListener('click', function() {
+        sizeOptions.forEach(opt => opt.classList.remove('selected'));
+        this.classList.add('selected');
+      });
+    });
 
+    // Optional: Thumbnail image switcher
+    const thumbnails = document.querySelectorAll('.thumbnail');
+    const mainImage = document.getElementById('mainImage');
+    thumbnails.forEach(thumb => {
+      thumb.addEventListener('click', function() {
+        thumbnails.forEach(t => t.classList.remove('active'));
+        this.classList.add('active');
+        mainImage.src = this.src;
+      });
+    });
+  </script>
 </body>
 </html>
