--- a/men_product5.html
+++ b/men_product5.html
@@ -5,70 +5,64 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Balenciaga Black Crewneck Logo T-shirt</title>
   <style>
-    html, body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #fff;
-      color: #000;
-    }
+    html,body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #000;
+        }
 
-    .header {
-      background-color: #fff;
-      color: #000;
-      padding: 10px 20px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      border-bottom: 1px solid #ccc;
-    }
+        .header {
+            background-color: #000;
+            color: #fff;
+            padding: 10px 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            border-bottom: 1px solid #ccc;
+        }
 
-    .header-left {
-      display: flex;
-      align-items: center;
-      gap: 550px;
-    }
+        .header-left {
+            display: flex;
+            align-items: center;
+            gap: 550px;
+        }
 
-    .logo img {
-      height: 30px;
-    }
+        .logo img {
+            height: 30px;
+        }
 
-    .nav-menu {
-      display: flex;
-      gap: 25px;
-      font-size: 1.3em;
-      align-items: center;
-    }
+        .nav-menu {
+            display: flex;
+            gap: 25px;
+            font-size: 1.3em;
+            align-items: center;
+        }
 
-    .nav-menu a {
-      text-decoration: none;
-      color: #000;
-      font-weight: bold;
-      align-items: center;
-    }
+        .nav-menu a {
+            text-decoration: none;
+            color: #ffffff;
+            font-weight: bold;
+            align-items: center;
+        }
 
-    .nav-menu a:hover {
-      text-decoration: underline;
-    }
+        .help-signup {
+            display: flex;
+            gap: 20px;
+            font-size: 1.3em;
+        }
 
-    .help-signup {
-      display: flex;
-      gap: 20px;
-      font-size: 1.3em;
-    }
+        .help-signup a {
+            text-decoration: none;
+            color: #ffffff;
+        }
 
-    .help-signup a {
-      text-decoration: none;
-      color: #000;
-    }
-
-    .help-signup a:hover {
-      text-decoration: underline;
-    }
-
+        .help-signup a:hover {
+            text-decoration: underline;
+        }
     .container {
       width: 100%;
       min-height: 100vh;
-      background: #fff;
+      background: white ;
       padding: 40px 5%;
       box-sizing: border-box;
       max-width: 1200px;
@@ -82,7 +76,6 @@
       border: none;
       cursor: pointer;
       border-radius: 5px;
-      color: #000;
     }
 
     .product-container {
@@ -108,8 +101,6 @@
       margin-bottom: 15px;
       cursor: zoom-in;
       transition: transform 0.3s ease;
-      background: #fff;
-      display: block;
     }
 
     .main-image:hover {
@@ -130,7 +121,6 @@
       cursor: pointer;
       border: 2px solid transparent;
       transition: all 0.3s ease;
-      background: #fff;
     }
 
     .thumbnail:hover {
@@ -143,7 +133,6 @@
 
     h1, h2 {
       margin: 15px 0;
-      color: #000;
     }
 
     .size-selector {
@@ -163,12 +152,10 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      border: 1px solid #000;
+      border: 1px solid black;
       border-radius: 5px;
       cursor: pointer;
       transition: all 0.3s ease;
-      background: #fff;
-      color: #000;
     }
 
     .size-option:hover {
@@ -177,7 +164,7 @@
 
     .size-option.selected {
       background-color: #0056b3;
-      color: #fff;
+      color: white;
       border-color: #0056b3;
     }
 
@@ -188,8 +175,8 @@
     button.add-to-bag {
       width: 200px;
       padding: 15px;
-      background-color: #000;
-      color: #fff;
+      background-color: black;
+      color: white;
       border: none;
       border-radius: 5px;
       font-size: 16px;
@@ -211,115 +198,112 @@
       margin-bottom: 12px;
       font-style: italic;
     }
+.promo-banner {
+            background-color: #F7E146;
+            color: #000;
+            padding: 20px 0;
+            font-size: 18px;
+            font-weight: bold;
+            text-align: center;
+        }
 
-    .promo-banner {
-      background-color: #F7E146;
-      color: #000;
-      padding: 20px 0;
-      font-size: 18px;
-      font-weight: bold;
-      text-align: center;
-    }
-
-    .promo-banner button {
-      background-color: #000;
-      color: #fff;
-      border: 2px solid #000;
-      padding: 10px 20px;
-      cursor: pointer;
-      font-size: 16px;
-      font-weight: bold;
-    }
+        .promo-banner button {
+            background-color: #000;
+            color: #fff;
+            border: 2px solid #000;
+            padding: 10px 20px;
+            cursor: pointer;
+            font-size: 16px;
+            font-weight: bold;
+        }
 
     footer {
-      background-color: #fff;
-      text-align: center;
-      color: #000;
-    }
+            background-color: #000;
+            text-align: center;
+        }
 
-    .footer-content {
-      display: flex;
-      justify-content: space-around;
-      padding: 40px 10%;
-      text-align: left;
-      flex-wrap: wrap;
-      color: #333;
-      background: #fff;
-    }
+        .footer-content {
+            display: flex;
+            justify-content: space-around;
+            padding: 40px 10%;
+            text-align: left;
+            flex-wrap: wrap;
+            color: #ccc;
+        }
 
-    .footer-column {
-      width: 15%;
-      color: #333;
-    }
+        .footer-column {
+            width: 15%;
+            color: #ccc;
+        }
 
-    .footer-column h3 {
-      font-size: 14px;
-      font-weight: bold;
-      margin-bottom: 15px;
-      color: #000;
-    }
+        .footer-column h3 {
+            font-size: 14px;
+            font-weight: bold;
+            margin-bottom: 15px;
+        }
 
-    .footer-column ul {
-      list-style: none;
-      padding: 0;
-    }
+        .footer-column ul {
+            list-style: none;
+            padding: 0;
+        }
 
-    .footer-column ul li {
-      font-size: 13px;
-      margin-bottom: 8px;
-      cursor: pointer;
-    }
+        .footer-column ul li {
+            font-size: 13px;
+            margin-bottom: 8px;
+            cursor: pointer;
+        }
 
-    .footer-column ul li a {
-      color: #333;
-      text-decoration: none;
-    }
+        .footer-column ul li a {
+            color: #ccc;
+            text-decoration: none;
+        }
 
-    .footer-column ul li a:hover {
-      text-decoration: underline;
-    }
+        .footer-column ul li a:hover {
+            text-decoration: underline;
+        }
 
-    .footer-column.social {
-      text-align: left;
-    }
+        .footer-column.social {
+            text-align: left;
+        }
 
-    .footer-column.social a {
-      color: #333;
-      text-decoration: none;
-    }
+        .footer-column.social a {
+            color: #ccc;
+            text-decoration: none;
+        }
 
-    .footer-column.social a:hover {
-      text-decoration: underline;
-    }
+        .footer-column.social a:hover {
+            text-decoration: underline;
+        }
 
-    .footer-bottom {
-      background-color: #f3f3f3;
-      padding: 15px 0;
-      font-size: 12px;
-      color: #666;
-    }
+        .footer-bottom {
+            background-color: #1a1a1a;
+            padding: 15px 0;
+            font-size: 12px;
+            color: #ccc;
+        }
 
-    .icons {
-      display: flex;
-      align-items: center;
-      gap: 1px;
-      height: 40px;
-      width: auto;
-    }
+        .icons {
+            display: flex;
+            align-items: center;
+            gap: 1px;
+            height: 40px;
+            width: auto;
+        }
 
-    .icons img {
-      height: 30px;
-      width: 30px;
-      object-fit: contain;
-    }
+        .icons img {
+            height: 30px;
+            width: 30px;
+            object-fit: contain;
+        }
 
-    .collection-heading {
-      text-align: center;
-      font-size: 3em;
-      margin: 40px 0 20px;
-      color: #000;
-      background-color: #fff;
-    }
+        .collection-heading {
+            text-align: center;
+            font-size: 3em;
+            margin: 40px 0 20px;
+            color: white;
+            background-color: #000;
+        }
+
   </style>
 </head>
 <body>
@@ -353,29 +337,30 @@
     <button class="back-btn" onclick="history.back()">← Back to Catalogue</button>
     <div class="product-container">
       <div class="product-images">
-        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/39614815-be6a-4b01-be04-bab385a972df/AS+M+NK+TCH+SUPER+LTWT+JKT.png" alt="Comfort Sliders" />
+        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/39614815-be6a-4b01-be04-bab385a972df/AS+M+NK+TCH+SUPER+LTWT+JKT.png"  alt="Comfort Sliders" />
         <div class="thumbnail-container">
-          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/39614815-be6a-4b01-be04-bab385a972df/AS+M+NK+TCH+SUPER+LTWT+JKT.png" alt="Angle 1">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/389f7ac3-89b8-41b7-8837-441e8c1c9af2/AS+M+NK+TCH+SUPER+LTWT+JKT.png" alt="Angle 2">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/d850c06b-944f-45ed-8d73-ea744a290c1e/AS+M+NK+TCH+SUPER+LTWT+JKT.png" alt="Angle 3">
+          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/39614815-be6a-4b01-be04-bab385a972df/AS+M+NK+TCH+SUPER+LTWT+JKT.png" onclick="changeImage(this)" alt="Angle 1">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/389f7ac3-89b8-41b7-8837-441e8c1c9af2/AS+M+NK+TCH+SUPER+LTWT+JKT.png" onclick="changeImage(this)" alt="Angle 2">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/d850c06b-944f-45ed-8d73-ea744a290c1e/AS+M+NK+TCH+SUPER+LTWT+JKT.png" onclick="changeImage(this)" alt="Angle 3">
         </div>
       </div>
       <div class="product-details">
-        <h1>Nike Sportswear Tech</h1>
-        <h2> ₹12000</h2>
+        <h1>Balenciaga Black Crewneck Logo T-shirt</h1>
+        <h2> ₹53500.41</h2>
         <p><strong>Description:</strong> Minimalist and bold, this black Balenciaga crewneck tee features a relaxed fit and signature logo detail — a modern staple crafted in premium cotton for everyday luxury.</p>
         <div class="size-selector">
           <strong>Select Size:</strong>
-          <div class="size-options">
-            <div class="size-option">S</div>
-            <div class="size-option">M</div>
-            <div class="size-option">L</div>
-            <div class="size-option">XL</div>
-            <div class="size-option">XXL</div>
+<div class="size-options">
+            <div class="size-option" onclick="selectSize(this)">S</div>
+            <div class="size-option" onclick="selectSize(this)">M</div>
+            <div class="size-option" onclick="selectSize(this)">L</div>
+            <div class="size-option" onclick="selectSize(this)">XL</div>
+            <div class="size-option" onclick="selectSize(this)">XXL</div>
           </div>
         </div>
+        </div>
         <div class="add-to-bag-container">
-          <button class="add-to-bag" data-id="005" data-name="Nike Sportswear Tech" data-price="120000">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="005" data-name="Balenciaga Black Crewneck Logo T-shirt" data-price="53500.41">
             Add to Bag
           </button>
         </div>
@@ -433,26 +418,6 @@
     </div>
   </footer>
   <script src="auth.js"></script>
-  <script>
-    // Size selection logic for highlight only (for cart, just use selected class in your cart logic)
-    const sizeOptions = document.querySelectorAll('.size-option');
-    sizeOptions.forEach(option => {
-      option.addEventListener('click', function() {
-        sizeOptions.forEach(opt => opt.classList.remove('selected'));
-        this.classList.add('selected');
-      });
-    });
 
-    // Optional: Thumbnail image switcher
-    const thumbnails = document.querySelectorAll('.thumbnail');
-    const mainImage = document.getElementById('mainImage');
-    thumbnails.forEach(thumb => {
-      thumb.addEventListener('click', function() {
-        thumbnails.forEach(t => t.classList.remove('active'));
-        this.classList.add('active');
-        mainImage.src = this.src;
-      });
-    });
-  </script>
 </body>
 </html>
