--- a/men_product5.html
+++ b/men_product5.html
@@ -349,10 +349,10 @@
       </div>
 
       <div class="product-details">
-        <h1>Balenciaga Black Crewneck Logo T-shirt</h1>
-        <h2> ₹53500.41</h2>
+        <h1>Nike Sportswear Tech</h1>
+        <h2> ₹14999</h2>
 
-        <p><strong>Description:</strong> Soft, stylish, and built for everyday comfort. The Jordan Brooklyn Fleece Shorts feature premium fleece fabric with a relaxed fit — perfect for off-court vibes or casual wear.</p>
+        <p><strong>Description:</strong> Step into the future of streetwear with the Nike Sportswear Tech collection — where cutting-edge design meets unmatched comfort. Built for movement and made to turn heads.</p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
@@ -366,7 +366,7 @@
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="004" data-name="Balenciaga Black Crewneck Logo T-shirt" data-price="53500.41">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="004" data-name="Nike Sportswear Tech" data-price="14999">
   		        Add to Bag
 	        </button>
         </div>
