--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <title>About Us | Athletix</title>
     <link rel="stylesheet" href="main.css">
     <style>
-        body {
+        html,body {
             margin: 0;
             font-family: Arial, sans-serif;
         }
