--- a/about.html
+++ b/about.html
@@ -185,6 +185,15 @@
             color: #ccc;
         }
 
+        .footer-content {
+            display: flex;
+            justify-content: space-around;
+            padding: 40px 10%;
+            text-align: left;
+            flex-wrap: wrap;
+            color: #ccc;
+        }
+
         .footer-column {
             width: 15%;
             color: #ccc;
@@ -228,6 +237,8 @@
         .footer-column.social a:hover {
             text-decoration: underline;
         }
+
+        
 
         .footer-bottom {
             background-color: #1a1a1a;
