--- a/about.html
+++ b/about.html
@@ -337,7 +337,7 @@
             <p>JOIN Athletix AND GET 10% OFF</p>
             <button onclick="window.location.href='https://ryanatrix.github.io/UID/login&signup.html'">Sign Up for Free →</button>
 
-        </div>>
+        </div>
         <div class="footer-content">
             <div class="footer-column">
                 <h3>CATEGORIES</h3>
