--- a/about.html
+++ b/about.html
@@ -176,16 +176,6 @@
             text-align: center;
         }
 
-
-        .footer-content {
-            display: flex;
-            justify-content: space-around;
-            padding: 40px 10%;
-            text-align: left;
-            flex-wrap: wrap;
-            color: #ccc;
-        }
-
         .footer-content {
             display: flex;
             justify-content: space-around;
@@ -239,8 +229,6 @@
             text-decoration: underline;
         }
 
-        
-
         .footer-bottom {
             background-color: #1a1a1a;
             padding: 15px 0;
@@ -260,6 +248,14 @@
             height: 30px;
             width: 30px;
             object-fit: contain;
+        }
+
+        .collection-heading {
+            text-align: center;
+            font-size: 3em;
+            margin: 40px 0 20px;
+            color: black;
+            background-color: white;
         }
     </style>
     <link rel="icon" href="fav.jpeg" type="image/jpeg">
