--- a/about.html
+++ b/about.html
@@ -4,14 +4,9 @@
     <title>About Us | Athletix</title>
     <link rel="stylesheet" href="main.css">
     <style>
-        * {
-            font-family: Arial, sans-serif;
-       }
- 
-       body {
+        body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background-color:white;
         }
 
         .header {
@@ -63,12 +58,11 @@
             text-decoration: underline;
         }
 
-
         .main-content {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            background-color: white;
+            background-color: #000;
             color: #fff;
             padding: 20px;
         }
@@ -95,21 +89,14 @@
             display: inline-block;
             margin: 10px 5px;
             padding: 10px 20px;
-            background-color: #000;
-            color: #fff;
+            background-color: #fff;
+            color: #000;
             text-decoration: none;
             border-radius: 5px;
         }
 
         .main-content .text-content a:hover {
-            background-color: #000;
-        }
-
-
-        .main-content h1 {
-            text-align: center;
-            font-size: 3em;
-            margin-bottom: 30px;
+            background-color: #ddd;
         }
 
         .container {
@@ -124,8 +111,8 @@
         }
 
         h2 {
-            font-size: 28px;
-            margin-top: 40px;
+            font-size: 24px;
+            margin-top: 30px;
             color: #2d3436;
         }
 
@@ -139,17 +126,14 @@
             margin-left: 20px;
         }
 
-        .section {
-            margin-bottom: 50px;
+        .info-box {
+            background: #f9f9f9;
+            padding: 25px;
+            border-radius: 6px;
+            border-left: 5px solid #00cec9;
         }
-
-        .highlight {
-            background-color: #f0f0f0;
-            padding: 20px;
-            border-left: 5px solid #0984e3;
-            border-radius: 5px;
-        }
-                    .promo-banner {
+        footer {
+            .promo-banner {
             background-color: #F7E146;
             color: #000;
             padding: 20px 0;
@@ -167,11 +151,6 @@
             font-size: 16px;
             font-weight: bold;
         }
-            background-color: #000;
-            text-align: center;
-        }
-     
-        footer {
             background-color: #000;
             text-align: center;
         }
@@ -249,14 +228,6 @@
             width: 30px;
             object-fit: contain;
         }
-
-        .collection-heading {
-            text-align: center;
-            font-size: 3em;
-            margin: 40px 0 20px;
-            color: black;
-            background-color: white;
-        }
     </style>
     <link rel="icon" href="fav.jpeg" type="image/jpeg">
 </head>
@@ -329,7 +300,7 @@
         </div>
     </div>
 
-    <footer>
+     <footer>
         <div class="promo-banner">
             <p>JOIN Athletix AND GET 10% OFF</p>
             <button onclick="window.location.href='https://ryanatrix.github.io/UID/login&signup.html'">Sign Up for Free →</button>
