--- a/men_product8.html
+++ b/men_product8.html
@@ -366,11 +366,11 @@
         <div class="size-selector">
           <strong>Select Size:</strong>
           <div class="size-options">
-            <div class="size-option">S</div>
-            <div class="size-option">M</div>
-            <div class="size-option">L</div>
-            <div class="size-option">XL</div>
-            <div class="size-option">XXL</div>
+            <div class="size-option" onclick="selectSize(this)">S</div>
+            <div class="size-option" onclick="selectSize(this)">M</div>
+            <div class="size-option" onclick="selectSize(this)">L</div>
+            <div class="size-option" onclick="selectSize(this)">XL</div>
+            <div class="size-option" onclick="selectSize(this)">XXL</div>
           </div>
         </div>
         <div class="add-to-bag-container">
