--- a/women_product6.html
+++ b/women_product6.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Women's Skirt<title>
+  <title>Women's Skirt</title>
   <style>
     html,body {
             margin: 0;
