--- a/men_product9.html
+++ b/men_product9.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Nike Tech Men's Full-Zip Windrunner Hoodie</title>
